--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,17 @@ version: '3.8'
 services:
   node14:
     build:
-      context: .docker
+      context: docker
       dockerfile: node14.Dockerfile
+    image: local/node14
+    
 
-  ticket-booking:
-    image: 'ticket-booking_node14'
-    container_name: ticket-booking
+  booking:
+    image: local/node14:latest
+    container_name: booking
     depends_on:
-      - mysqldb_ticket
       - node14
+      - mysqldb
     volumes:
       - './:/var/www/app'
     restart: always
@@ -18,7 +20,7 @@ services:
       booksys:
         ipv4_address: 172.32.0.2
         aliases:
-          - ticket-booking.local
+          - booking.local
     command: >
       bash -c "npm install
       && npm run dev"
@@ -33,23 +35,23 @@ services:
     ports:
       - '5432:5432'
     volumes: 
-      - postgresdb:/var/lib/postgresql/data
-      - ./db/postgress.sql:/docker-entrypoint-initdb.d/postgress.sql
+      - ./docker/entrypoint/postgress.sql:/docker-entrypoint-initdb.d/booking_service.sql
     networks:
      booksys:
         ipv4_address: 172.32.0.3
         aliases:
           - postgresdb.local
 
-  mysqldb_ticket:
-    container_name: mysqldb_ticket
+  mysqldb:
+    container_name: mysqldb
     restart: always
     image: mysql:8
     command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: root
     volumes:
-      - 'mysqldb_ticket:/var/lib/mysql'
+      # - 'mysqldb:/var/lib/mysql'
+      - ./docker/entrypoint/mysql.sql:/docker-entrypoint-initdb.d/booking_service.sql
     ports:
       - '3306:3306'
       - '2206:22'
@@ -57,13 +59,13 @@ services:
      booksys:
         ipv4_address: 172.32.0.4
         aliases:
-          - mysqldb_ticket.local
+          - mysqldb.local
 
 
 volumes:
   postgresdb:
     driver: local
-  mysqldb_ticket:
+  mysqldb:
 
 
 
