--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
       "typeorm-typedi-extensions": "^0.4.1"
    },
    "devDependencies": {
+      "@faker-js/faker": "^7.6.0",
       "@types/body-parser": "^1.19.2",
       "@types/config": "^3.3.0",
       "@types/di": "0.0.1",
