--- a/package.json
+++ b/package.json
@@ -19,15 +19,21 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "@faker-js/faker": "^7.6.0",
       "body-parser": "^1.20.1",
       "class-transformer": "^0.5.1",
       "class-validator": "^0.13.2",
+      "cls-rtracer": "^2.6.2",
       "config": "^3.3.8",
+      "cron": "^2.1.0",
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
+      "express-winston": "^4.2.0",
+      "lodash": "^4.17.21",
       "moment": "^2.29.4",
       "morgan": "^1.10.0",
       "mysql": "^2.18.1",
+      "node-cron": "^3.0.2",
       "pg": "^8.4.0",
       "postgresql": "0.0.1",
       "reflect-metadata": "^0.1.13",
@@ -36,19 +42,24 @@
       "typedi": "^0.10.0",
       "typeorm": "0.3.10",
       "typeorm-seeding": "^1.6.1",
-      "typeorm-typedi-extensions": "^0.4.1"
-   },
-   "devDependencies": {
-      "@faker-js/faker": "^7.6.0",
+      "typeorm-typedi-extensions": "^0.4.1",
+      "uuid": "^9.0.0",
+      "winston": "^3.8.2",
       "@types/body-parser": "^1.19.2",
       "@types/config": "^3.3.0",
+      "@types/cron": "^2.0.0",
       "@types/di": "0.0.1",
       "@types/express": "^4.17.14",
+      "@types/lodash": "^4.14.189",
       "@types/morgan": "^1.9.3",
       "@types/mysql": "^2.15.21",
       "@types/node": "^16.11.10",
+      "@types/node-cron": "^3.0.6",
+      "@types/uuid": "^8.3.4",
       "@typescript-eslint/eslint-plugin": "^5.42.1",
-      "@typescript-eslint/parser": "^5.42.1",
+      "@typescript-eslint/parser": "^5.42.1"
+   },
+   "devDependencies": {
       "eslint": "^8.27.0",
       "eslint-config-airbnb": "^19.0.4",
       "eslint-config-airbnb-typescript": "^17.0.0",
