--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     command: >
       bash -c "
       cp .env.example .env
+      && npm run migration:up
       && npm install
       && npm run dev"
 
