--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       cp .env.example .env
       && npm run migration:up
       && npm install
-      && npm run dev"
+      && npm run start"
 
   # postgresdb:
   #   container_name: postgresdb
